// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #4f0599;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-4 {
=======
.emotion-2 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-4 {
>>>>>>> refactor: use colors from theme from globalstyles to modal (#161)
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-4.emotion-4 {
=======
.emotion-2.emotion-2 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
.emotion-4.emotion-4 {
>>>>>>> refactor: use colors from theme from globalstyles to modal (#161)
  vertical-align: top;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
    to="/"
  >
    Hello
    <svg
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-2 emotion-3 emotion-4"
=======
      class="emotion-1 emotion-2"
>>>>>>> refactor: migrate colors from theme in icon (#160)
=======
      class="emotion-2 emotion-3 emotion-4"
>>>>>>> refactor: use colors from theme from globalstyles to modal (#161)
      viewBox="0 0 24 24"
    >
      <path
        d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with to props 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #4f0599;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    to="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render blue 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #1e4293;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    to="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render gray 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #b2b6c3;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #798096;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    to="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render grey 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #b2b6c3;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #798096;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    to="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render inherit 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: inherit;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    to="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render primary 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #4f0599;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    to="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render white 1`] = `
<DocumentFragment>
  .emotion-1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #fff;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #ccc;
}

<a
    class="emotion-0 emotion-1"
    href="/"
    to="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
